--- a/quiz/package.json
+++ b/quiz/package.json
@@ -28,7 +28,11 @@
     "webpack-dev-server": "^5.0.2"
   },
   "dependencies": {
+    "css-loader": "^6.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4"
   }
 }
