--- a/quiz/package.json
+++ b/quiz/package.json
@@ -34,6 +34,7 @@
     "react-spinners": "^0.13.8",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4"
+    "style-loader": "^3.3.4",
+    "styled-components": "^6.1.8"
   }
 }
